修改 NbtBlockFunction（需要优选）